# geomap

./: README.md  pyproject.toml
scripts/: serve
src/geomap/: main.py
src/geomap/public/html/: index.html
src/geomap/public/static/geojson/: sites.json
src/geomap/public/static/js/: geoloc.js
